; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_locks_arm.c_lck_rw_done_gen.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_locks_arm.c_lck_rw_done_gen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i32, i64, i64, i64 }
%struct.TYPE_6__ = type { i32, i32 }

@LCK_RW_TYPE_SHARED = common dso_local global i64 0, align 8
@LCK_RW_TYPE_EXCLUSIVE = common dso_local global i64 0, align 8
@TH_SFLAG_RW_PROMOTED = common dso_local global i32 0, align 4
@LS_LCK_RW_DONE_RELEASE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32)* @lck_rw_done_gen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @lck_rw_done_gen(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_7__, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.TYPE_6__*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %5, i32 0, i32 0
  store i32 %9, i32* %10, align 8
  %11 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %5, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = icmp sle i32 %12, 1
  br i1 %13, label %14, label %39

14:                                               ; preds = %2
  %15 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %5, i32 0, i32 3
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %14
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @LCK_RW_WRITER_EVENT(i32* %19)
  %21 = call i32 @thread_wakeup(i32 %20)
  br label %22

22:                                               ; preds = %18, %14
  %23 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %5, i32 0, i32 4
  %24 = load i64, i64* %23, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %30

26:                                               ; preds = %22
  %27 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %5, i32 0, i32 3
  %28 = load i64, i64* %27, align 8
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %38, label %30

30:                                               ; preds = %26, %22
  %31 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %5, i32 0, i32 2
  %32 = load i64, i64* %31, align 8
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %38

34:                                               ; preds = %30
  %35 = load i32*, i32** %3, align 8
  %36 = call i32 @LCK_RW_READER_EVENT(i32* %35)
  %37 = call i32 @thread_wakeup(i32 %36)
  br label %38

38:                                               ; preds = %34, %30, %26
  br label %39

39:                                               ; preds = %38, %2
  %40 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %5, i32 0, i32 1
  %41 = load i32, i32* %40, align 4
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %43, label %45

43:                                               ; preds = %39
  %44 = load i64, i64* @LCK_RW_TYPE_SHARED, align 8
  store i64 %44, i64* %6, align 8
  br label %47

45:                                               ; preds = %39
  %46 = load i64, i64* @LCK_RW_TYPE_EXCLUSIVE, align 8
  store i64 %46, i64* %6, align 8
  br label %47

47:                                               ; preds = %45, %43
  %48 = call %struct.TYPE_6__* (...) @current_thread()
  store %struct.TYPE_6__* %48, %struct.TYPE_6__** %7, align 8
  %49 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %50 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %49, i32 0, i32 1
  %51 = load i32, i32* %50, align 4
  %52 = add nsw i32 %51, -1
  store i32 %52, i32* %50, align 4
  store i32 %51, i32* %8, align 4
  %53 = load i32, i32* %8, align 4
  %54 = icmp eq i32 %53, 1
  br i1 %54, label %55, label %67

55:                                               ; preds = %47
  %56 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %57 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %56, i32 0, i32 0
  %58 = load i32, i32* %57, align 4
  %59 = load i32, i32* @TH_SFLAG_RW_PROMOTED, align 4
  %60 = and i32 %58, %59
  %61 = icmp ne i32 %60, 0
  br i1 %61, label %62, label %67

62:                                               ; preds = %55
  %63 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %64 = load i32*, i32** %3, align 8
  %65 = call i32 @unslide_for_kdebug(i32* %64)
  %66 = call i32 @lck_rw_clear_promotion(%struct.TYPE_6__* %63, i32 %65)
  br label %67

67:                                               ; preds = %62, %55, %47
  %68 = load i64, i64* %6, align 8
  ret i64 %68
}

declare dso_local i32 @thread_wakeup(i32) #1

declare dso_local i32 @LCK_RW_WRITER_EVENT(i32*) #1

declare dso_local i32 @LCK_RW_READER_EVENT(i32*) #1

declare dso_local %struct.TYPE_6__* @current_thread(...) #1

declare dso_local i32 @lck_rw_clear_promotion(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @unslide_for_kdebug(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
